Update API get all user dan update user collection MongoDB

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-URI=mongodb+srv://ko_rizki:rizki002@safestrong.potgqke.mongodb.net/test
+URI=mongodb+srv://ko_rizki:rizki002@safestrong.potgqke.mongodb.net/?retryWrites=true&w=majority
